chore: update style

--- a/src/style.css
+++ b/src/style.css
@@ -901,6 +901,7 @@ main {
 
 html {
   scroll-behavior: smooth;
+  scroll-padding: 70px;
 }
 
 header {
@@ -959,6 +960,10 @@ header svg {
   fill: currentColor;
 }
 
+main {
+  max-width: initial !important;
+}
+
 main > div {
   margin: 0 auto;
   max-width: 1140px;
@@ -1000,7 +1005,39 @@ main .aside .content > div {
 
 main .aside .content a {
   text-decoration: none !important;
-  margin: 0 0 8px;
+  display: block;
+  line-height: 24px;
+  font-size: 14px;
+  font-weight: 400;
+  color: rgba(235, 235, 245, 0.6);
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  transition: color 0.5s;
+  position: relative;
+}
+
+main .aside .content a:hover {
+  color: var(--accent);
+}
+
+main .aside .content a::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  width: 1px;
+  height: 100%;
+  left: -17px;
+  transition: all 0.5s;
+  opacity: 0;
+}
+
+main .aside .content a.is-active {
+  color: var(--accent);
+}
+
+main .aside .content a.is-active::before {
+  background-color: var(--accent);
+  opacity: 1;
 }
 
 main .aside > div {
