--- a/src/style.css
+++ b/src/style.css
@@ -347,6 +347,7 @@ body {
   transition-timing-function: ease;
   transition: border-color 0.3s;
   position: relative;
+  padding: 0 0 3px;
 }
 
 .twoslash .twoslash-popup-container {
